Adjust signup and login modal, fix styling for cleaner forms more aligned with AirBnB site

--- a/app/assets/stylesheets/api/main.scss
+++ b/app/assets/stylesheets/api/main.scss
@@ -85,7 +85,7 @@ header > a:first-of-type{
     background-size: 25vw 14vw;
     min-width: 100px;
     background-image: url(https://s3-us-west-2.amazonaws.com/mybnb-seeds/LogoLg_v1.png);
-    background-position-x: 50%;
+    background-position-x: 34%;
     background-repeat: no-repeat;
 }
 
